Added response for category
