# api/controllers/GetProductByCategory.js
@@ -1,0 +1,17 @@
+'use strict'
+const { categoriesFilter, brandsFilter, product, categories } = require('../../utils/fixtures')
+
+function GetProductByCategory(req, res) {
+  res.json({
+    productLists: [product],
+    filters: {
+      categories: categoriesFilter,
+      brands: brandsFilter
+    },
+    totalCount: 6
+  })
+}
+
+module.exports = {
+  GetProductByCategory
+}
